--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Cabeçalho -->
@@ -31,7 +37,7 @@
       <!-- Cabeçalho -->
 
       <main class="main">
-        <h3>Preencha seus dados</h3>
+        <h1>Preencha seus dados</h1>
         <form id="formCrefacil" class="formCrefacil">
           <section id="dados-pessoais">
             <label
@@ -270,7 +276,7 @@
                   type="text"
                   name="pixKey"
                   id="pixKey"
-                  placeholder="Informe a chave conforme o tipo escolhido"
+                  placeholder="Chave correspondente"
                   required
                 />
               </label>
